fix dumb scouter info being misaligned

--- a/src/scouting/public/css/global.css
+++ b/src/scouting/public/css/global.css
@@ -70,10 +70,6 @@ body {
 
 .scouting-info {
 	display: none;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
 }
 
 * {
